dpms: Don't crash if trying to interact with the fake screen

Qt uses at time a fake QScreen instance that isn't mirrored on Wayland.
This makes our code receive an output it does not expect.
Solve it by not attempting at setting the dpms on such outputs.

BUG: 470484


(cherry picked from commit 830f166a1246b6dc77913c930bb0ffb8f5fc6341)